syntax = "proto3";

package direktiv_flow;

option go_package = "github.com/direktiv/direktiv/pkg/flow/grpc";

import "google/protobuf/timestamp.proto";

message ReportActionResultsRequest {
	string instanceId = 1;
	int32 step = 2;
	string actionId = 3;
	string errorCode = 4;
	string errorMessage = 5;
	bytes output = 6;
	int32 iterator = 7;
}

message ActionLogRequest {
	string instanceId = 1;
	int32 iterator = 2;
	repeated string msg = 3;
}

